# dexios

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  SIGNING.md  book.toml  clippy.toml  deny.toml  flake.nix
.github/: dependabot.yml
.github/actions/sign-and-attest/: action.yml
.github/workflows/: audit.yml  build_nix.yml  cargo-build.yml  cli-surface.yml  dexios-tests.yml  docker.yml  docs.yml  release.yml  unit_tests.yml
book/src/: Checksums.md  Choosing-a-Key.md  Environment-Variables.md  Installing-and-Building.md  Introduction.md  SUMMARY.md  Safety-Contract.md  Security-Policy.md  Threat-Model.md  Usage-Examples.md
book/src/dexios-core/: Auditing.md  Encryption.md  Headers.md  Password-Hashing.md  Protected-Wrapper.md  README.md
book/src/dexios-domain/: README.md
book/src/technical-details/: Directory-Packing.md  Keys.md  Performance-Notes.md  README.md  Secure-Erase.md
dexios/: Cargo.toml  README.md
dexios-core/: Cargo.toml  README.md
dexios-core/blake3-balloon/: Cargo.toml  README.md
dexios-core/blake3-balloon/examples/: basic.rs  basic_usage.rs
dexios-core/blake3-balloon/src/: error.rs  hasher.rs  lib.rs  params.rs  protected.rs  salt.rs
dexios-core/src/: cipher.rs  header.rs  kdf.rs  key.rs  lib.rs  payload.rs  primitives.rs  protected.rs  stream.rs  visual.rs
dexios-core/src/header/: common.rs  mod.rs  v1.rs
dexios-core/tests/: header_write.rs  key_derivation.rs  legacy_suite_rejection.rs  protected.rs  public_api_footguns.rs  stream_v1.rs  v1_header.rs
dexios-core/tests/testdata/: README.md  fixture_manifest.toml  kdf_vectors.toml  v1_malformed_reserved_byte.hex  v1_valid_single_keyslot.hex
dexios-domain/: Cargo.toml  README.md
dexios-domain/src/: archive.rs  archive_path.rs  decrypt.rs  encrypt.rs  erase.rs  erase_dir.rs  hash.rs  hasher.rs  header.rs  key.rs  lib.rs  overwrite.rs  pack.rs  storage.rs  unpack.rs  utils.rs  workflow_error.rs
dexios-domain/src/header/: details.rs  dump.rs  restore.rs  strip.rs
dexios-domain/src/key/: add.rs  change.rs  delete.rs  verify.rs
dexios-domain/src/storage/: cleanup.rs  entry.rs  fs.rs  identity.rs  memory.rs  mod.rs  mutation.rs  temp.rs  test_support.rs  transaction.rs
dexios-domain/src/unpack/: callback.rs
dexios-domain/tests/: archive_public_api.rs  archive_streaming_feasibility.rs  cleanup_receipts.rs  common.rs  decrypt_workflow_errors.rs  detached_publication.rs  encrypt_short_write.rs  encrypt_workflow_errors.rs  fixture_manifest.toml  header_restore.rs  header_strip_guard.rs  header_workflow_errors.rs  key_api_surface.rs  key_op_archive_roundtrip.rs  key_verify_identity.rs  keyslots_crypto_v1.rs  keyslots_intent_v1.rs  keyslots_mutation_v1.rs  keyslots_v1.rs  pack_paths.rs  path_identity.rs  storage.rs  transactions.rs  transactions_failure_hooks.rs  transactions_linked_publication.rs  transactions_staged_output.rs  unpack.rs  unpack_commit_rollback.rs  unpack_dir_creation_fd.rs  unpack_manifest_v1.rs  unpack_overwrite_default.rs  unpack_path_identity.rs  unpack_symlink_revalidation.rs  workflow_errors.rs  workflow_public_api.rs
dexios-domain/tests/support/: common.rs  keyslots_v1.rs  tempdir.rs  transactions.rs  unpack_v1.rs
dexios-gui/: Cargo.toml
dexios-gui/src/: main.rs
dexios/src/: cli.rs  global.rs  main.rs  subcommands.rs
dexios/src/cli/: args.rs  overwrite.rs  prompt.rs  tests.rs
dexios/src/cli/commands/: archive.rs  hash.rs  header.rs  key.rs  mod.rs  stream.rs
dexios/src/global/: parameters.rs  states.rs  structs.rs
dexios/src/subcommands/: decrypt.rs  encrypt.rs  errors.rs  hashing.rs  header.rs  key.rs  pack.rs  unpack.rs
dexios/tests/: decrypt_cli_regressions.rs  delete_source_cli.rs  encrypt_cli_regressions.rs  fixture_manifest.toml  header_cli_regressions.rs  header_details_cli.rs  key_cli_regressions.rs  key_force_cli.rs  pack_cli_regressions.rs  storage_transactions_cli.rs  unpack_cli_regressions.rs  verification_gate_archive_path.rs  verification_gate_cli.rs  verification_gate_docs.rs  verification_gate_fixtures.rs  verification_gate_identity_reopens.rs  verification_gate_maintainability.rs  verification_gate_scripts.rs  verification_gate_source.rs  verification_gate_test_support.rs  verification_gate_workflows.rs  workflow_error_cli.rs  workflow_error_cli_archive.rs  workflow_error_cli_boundary.rs  workflow_error_cli_header_key.rs
dexios/tests/support/: keyfile_cli.rs  tempdir.rs  workflow_error_cli.rs
dexios/tests/verification_gate_support/: mod.rs
docs/: 404.html  Checksums.html  Choosing-a-Key.html  Environment-Variables.html  Installing-and-Building.html  Introduction.html  Safety-Contract.html  Security-Policy.html  Supporting-Dexios.html  Threat-Model.html  Usage-Examples.html  index.html  print.html  safety-contract.md  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-04ca19cf.js  searchindex-1787ea7b.js  searchindex-1a28b548.js  searchindex-22a03076.js  searchindex-2aa99cfa.js  searchindex-30bc5527.js  searchindex-39b3e328.js  searchindex-507dac85.js  searchindex-55585b20.js  searchindex-80ef0646.js  searchindex-83187c71.js  searchindex-83857cf6.js  searchindex-8e264159.js  searchindex-a1a458d6.js  searchindex-a3f1c30d.js  searchindex-accc9426.js  searchindex-c68e4b7a.js  searchindex-c86ac640.js  searchindex-c87ef55f.js  searchindex-cdf0b23e.js  searchindex-dba32a10.js  searchindex-f4765586.js  searchindex-f750f07e.js  searchindex-ff00a369.js  (+6 more)
docs/dexios-core/: API.html  Auditing.html  Encryption.html  Headers.html  Password-Hashing.html  Protected-Wrapper.html  index.html
docs/dexios-domain/: index.html
docs/technical-details/: Directory-Packing.html  Keys.html  Performance-Notes.html  Secure-Erase.html  index.html
my-dexios/: README.md
my-dexios/dexios-core/src/: cipher.rs  primitives.rs  (+1 more)
release-evidence/: RC-CLOSEOUT.md
scripts/: gen-release-body.sh  generate_release_manifest.sh  measure_performance_gate.sh  verify_assurance_replay.sh  verify_cli_surface.sh  verify_phase_gate.sh  verify_repo_hygiene.sh
spec/: dexios-paper.typ
(+10 files in other folders)
