[workspace]

members = [
    "dexios",
    "dexios-gui",
    "dexios-core",
    "dexios-domain",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.88"
license = "BSD-2-Clause"
homepage = "https://github.com/brxken128/dexios"

[workspace.dependencies]
anyhow = "1.0.102"
# blake3 is used only for CONTENT hashing (dexios-domain hasher/cleanup digests),
# never on the cryptographic KDF path. The original `=1.8.3` exact pin existed
# because blake3 was the BLAKE3-Balloon KDF; the crypto-1 Argon2id migration
# removed that coupling and dropped blake3 from dexios-core. With blake3 off the
# KDF path (dep-1 re-evaluation), an exact pin is no longer warranted: a caret
# range is acceptable for a content-hashing-only dependency.
blake3 = "1.8"
# Crypto-critical dependencies are exact-pinned (=x.y.z) so that a compromised
# semver-compatible patch cannot be pulled in by `cargo update`. CI builds use
# `--locked` (Cargo.lock), but the exact pin provides defense-in-depth at the
# manifest level. Non-crypto dependencies use caret ranges.
rand = "=0.10.1"
chacha20poly1305 = "=0.10.1"
aead = { version = "=0.5.2", features = ["stream"] }
zeroize = "=1.8.2"
subtle = "=2.6.1"
# Argon2id (OWASP-recommended, RFC 9106) is the normal KDF for new V1 keyslots.
# Minimal features: `alloc` for the memory block + `zeroize` to wipe it; no PHC parser.
argon2 = { version = "=0.5.3", default-features = false, features = ["alloc", "zeroize"] }
clap = { version = "4.6.1", features = ["cargo"] }
rpassword = "7.5.2"
indicatif = "0.18.4"
walkdir = "2.5.0"
rustix = { version = "1.1.4", features = ["fs"] }

[profile.release]
lto = "thin"
strip = "debuginfo"
codegen-units = 1
panic = "abort"

# Strictest-practical workspace lints (quality-3). Crates opt in with
# `[lints]\nworkspace = true`. The `priority = -1` groups are evaluated first so
# the individual lints below override them.
[workspace.lints.rust]
# Lint groups at priority -1 so the individual lints below override them.
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
unreachable_pub = "warn"
unused_qualifications = "warn"
unsafe_code = "deny"
non_ascii_idents = "deny"

[workspace.lints.clippy]
# Lint groups (priority -1 so specific lints below win on conflicts).
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Restriction lints surfaced as warnings: keep panicking/footgun patterns visible.
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
unreachable = "warn"
indexing_slicing = "warn"
string_slice = "warn"
arithmetic_side_effects = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
mem_forget = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
# Noisy / low-value here: explicitly allowed.
# `redundant_pub_crate` (nursery) fires on intentional `pub(crate)`/`pub(super)`
# encapsulation in the binary crate and shared test-support modules; rewriting to
# bare `pub` adds churn without real value, so we keep the explicit visibility.
redundant_pub_crate = "allow"
# The `test-support` feature name is pinned by source gates (it documents intent
# better than a bare `test`); the "-support suffix is redundant" cargo lint is noise.
redundant_feature_names = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
similar_names = "allow"
doc_markdown = "allow"
needless_pass_by_value = "allow"
missing_const_for_fn = "allow"
option_if_let_else = "allow"
multiple_crate_versions = "allow"
