[package]
name = "dexios-core"
description = "A library for encrypting/decrypting, password hashing, and for managing encrypted file headers that adhere to the Dexios format."
version = "1.2.0"
readme = "README.md"
authors = ["brxken128 <brxken128@tutanota.com>"]
homepage.workspace = true
repository = "https://github.com/brxken128/dexios/tree/master/dexios-core"
documentation = "https://docs.rs/dexios-core/latest/dexios_core/"
categories = ["cryptography", "encoding", "data-structures"]
rust-version.workspace = true
keywords = ["encryption", "secure"]
edition.workspace = true
license.workspace = true

# this is for sites other than crates.io, who may still use it
[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
visual = ["indicatif"]

[dependencies]
# for errors, only temporary
anyhow.workspace = true

# AEADS
aes-gcm.workspace = true
chacha20poly1305.workspace = true
deoxys.workspace = true
aead.workspace = true

# for wiping sensitive information from memory
zeroize.workspace = true

# for password hashing
argon2.workspace = true
balloon-hash.workspace = true
blake3 = { workspace = true, features = ["traits-preview"] }

# for generating random bytes
rand.workspace = true

indicatif = { workspace = true, optional = true }
