[package]
name = "dexios-core"
description = "A library for encrypting/decrypting, password hashing, and for managing encrypted file headers that adhere to the Dexios format."
version = "1.2.0"
readme = "README.md"
authors = [
    "brxken128 <brxken128@tutanota.com>",
    "Retengart <119082209+Retengart@users.noreply.github.com>",
]
homepage.workspace = true
repository = "https://github.com/brxken128/dexios/tree/master/dexios-core"
documentation = "https://docs.rs/dexios-core/latest/dexios_core/"
categories = ["cryptography", "encoding", "data-structures"]
rust-version.workspace = true
keywords = ["encryption", "secure"]
edition.workspace = true
license.workspace = true

# this is for sites other than crates.io, who may still use it
[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
visual = ["indicatif"]

[dependencies]
# AEADS
chacha20poly1305.workspace = true
aead.workspace = true

# for wiping sensitive information from memory
zeroize.workspace = true
subtle.workspace = true

# for password hashing (Argon2id; RFC 9106 memory-hard KDF)
argon2.workspace = true

# for generating random bytes
rand.workspace = true

indicatif = { workspace = true, optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
static_assertions = "1.1.0"
toml = "1.1.2"

[lints]
workspace = true
