[package]
name = "dexios-domain"
description = "A library that contains the inner-workings and core logic for Dexios."
version = "1.0.1"
edition.workspace = true
license.workspace = true
keywords = ["encryption", "secure"]
categories = ["cryptography", "encoding", "data-structures"]
repository = "https://github.com/brxken128/dexios/tree/master/dexios-domain"
homepage.workspace = true
documentation = "https://docs.rs/dexios-domain/latest/dexios_domain/"
readme = "README.md"
authors = ["brxken128 <brxken128@tutanota.com"]
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# this is for sites other than crates.io, who may still use it
[badges]
maintenance = { status = "actively-developed" }

[dependencies]
core = { package = "dexios-core", path = "../dexios-core", version = "1.2.0" }

rand.workspace = true
blake3.workspace = true
walkdir.workspace = true
zip.workspace = true
