[package]
name = "dexios"
version = "9.0.0"
authors = ["brxken128 <brxken128@tutanota.com>"]
readme = "README.md"
edition = "2024"
description = "Secure, fast and authenticated command-line encryption of files with modern algorithms and an audited encryption backend."
keywords = ["encryption", "utility", "file", "command-line", "secure"]
categories = ["cryptography", "command-line-utilities"]
repository = "https://github.com/brxken128/dexios/tree/master/dexios"
homepage = "https://github.com/brxken128/dexios"
documentation = "https://brxken128.github.io/dexios"
license = "BSD-2-Clause"
rust-version = "1.85.0"

# this is for sites other than crates.io, who may still use it
[badges]
maintenance = { status = "actively-developed" }

[dependencies]
blake3 = "1.8.2"
rand = "0.9"

domain = { package = "dexios-domain", version = "1.0.1", path = "../dexios-domain" }
core = { package = "dexios-core", path = "../dexios-core", version = "1.2.0" }

clap = { version = "4.5", features = ["cargo"] }
anyhow = "1.0.98"

zip = { version = "0.6.6", default-features = false, features = ["zstd"] }
rpassword = "7.4"
