[package]
name = "dexios"
version = "8.8.1"
authors = ["brxken128 <brxken128@tutanota.com>"]
readme = "README.md"
edition.workspace = true
description = "Secure, fast and authenticated command-line encryption of files with modern algorithms and an audited encryption backend."
keywords = ["encryption", "utility", "file", "command-line", "secure"]
categories = ["cryptography", "command-line-utilities"]
repository = "https://github.com/brxken128/dexios/tree/master/dexios"
homepage.workspace = true
documentation = "https://brxken128.github.io/dexios"
license.workspace = true
rust-version.workspace = true

# this is for sites other than crates.io, who may still use it
[badges]
maintenance = { status = "actively-developed" }

[dependencies]
blake3.workspace = true
rand.workspace = true

domain = { package = "dexios-domain", version = "1.0.1", path = "../dexios-domain" }
core = { package = "dexios-core", path = "../dexios-core", version = "1.2.0" }

clap.workspace = true
anyhow.workspace = true

zip.workspace = true
rpassword.workspace = true
