[package]
name = "blake3-balloon"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
authors = ["brxken128 <brxken128@tutanota.com>"]
license = "BSD-2-Clause"
description = "A Rust implementation of BLAKE3-Balloon password hashing algorithm"
repository = "https://github.com/brxken128/dexios"
keywords = ["cryptography", "hashing", "password", "blake3", "balloon"]
categories = ["cryptography", "authentication"]
readme = "README.md"

[dependencies]
# Core balloon hashing implementation
balloon-hash = "0.4.0"

# BLAKE3 hasher with traits
blake3 = { version = "1.3.3", features = ["traits-preview"] }

# Error handling
thiserror = "1.0"

# Memory security
zeroize = { version = "1.5.0", features = ["derive"] }

# Random number generation for salts
rand = { version = "0.8.5", optional = true }

[features]
default = ["std"]
std = []
salt-generation = ["rand"]

[dev-dependencies]
hex = "0.4"