[package]
name = "blake3-balloon"
version = "0.1.0"
edition = "2021"
authors = ["brxken128 <brxken128@tutanota.com>"]
description = "BLAKE3-Balloon password hashing algorithm implementation"
repository = "https://github.com/brxken128/dexios/tree/master/dexios-core/blake3-balloon"
license = "BSD-2-Clause"
keywords = ["crypto", "password", "hashing", "blake3", "balloon"]
categories = ["cryptography", "algorithms"]
readme = "README.md"

[dependencies]
blake3 = { version = "1.5", features = ["traits-preview"] }
balloon-hash = "0.4.0"
zeroize = { version = "1.8", features = ["derive"] }
anyhow = "1.0"
rand = { version = "0.8", optional = true }

[features]
default = ["rand"]
rand = ["dep:rand"]

[dev-dependencies]
hex = "0.4"
criterion = "0.5"
